--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/vite": "^4.1.7",
     "antd": "^5.25.1",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "js-md5": "^0.8.3",
     "mockjs": "^1.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
